# lemon

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  flake.nix
.github/workflows/: ci.yml
crates/lemon-agent/: Cargo.toml  README.md
crates/lemon-agent/src/: lib.rs
crates/lemon-graph/: Cargo.toml  README.md
crates/lemon-graph/src/: engine.rs  execution.rs  lib.rs  value.rs
crates/lemon-graph/src/execution/: mod.rs  step.rs
crates/lemon-graph/src/nodes/: callback.rs  constant.rs  delay.rs  log.rs  mod.rs  prompt.rs  store.rs  util.rs
crates/lemon-graph/src/nodes/core/: callback.rs  log.rs  mod.rs  prompt.rs
crates/lemon-llm/: Cargo.toml  README.md
crates/lemon-llm/examples/: chat.rs  ollama.rs
crates/lemon-llm/src/: lib.rs  ollama.rs  replicate.rs
crates/lemon-memory/: Cargo.toml  README.md
crates/lemon-memory/src/: lib.rs  qdrant.rs
