[workspace]
resolver = "2"
members = [
  "crates/*",
]

[workspace.package]
version = "0.0.0"
license = "GPL-3.0"
repository = "https://github.com/unavi-xyz/lemon"
edition = "2021"

[workspace.dependencies]
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"

[profile.release]
lto = true
