[workspace]
resolver = "2"
members = [
  "crates/*",
]

[workspace.package]
version = "0.0.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/unavi-xyz/lemon"
edition = "2021"

[workspace.dependencies]
lemon-graph = { path = "crates/lemon-graph", version = "0.0.1" }
petgraph = { version = "0.6.4", default-features = false }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-test = "0.2.4"

[profile.release]
lto = true
