[package]
name = "lemon-agent"
description = "Agent framework using lemon-graph."
keywords = ["agent", "ai", "graph"]
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
lemon-graph.workspace = true
petgraph.workspace = true
thiserror.workspace = true
tracing.workspace = true
