[package]
name = "lemon-graph"
description = "Async directed computation graphs."
keywords = ["computation", "graph"]
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
petgraph = { version = "0.6.4", default-features = false }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
