[package]
name = "lemon-graph"
description = "Async directed computation graphs."
keywords = ["computation", "graph"]
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
petgraph.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-test = "0.2.4"
