[package]
name = "lemon-llm"
description = "LLM nodes for lemon-graph."
keywords = ["graph", "llm"]
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = ["ollama", "replicate"]
ollama = []
replicate = ["dep:replicate-rust"]

[dependencies]
lemon-graph = { path = "../lemon-graph" }
reqwest = "0.11.24"
serde_json = "1.0.114"
thiserror.workspace = true
tracing.workspace = true

replicate-rust = { version = "0.0.5",optional = true }

[dev-dependencies]
tokio.workspace = true
tracing-subscriber = "0.3.18"
