[package]
name = "lemon-llm"
description = "LLM nodes for lemon-graph."
keywords = ["graph", "llm"]
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = ["ollama", "replicate"]
ollama = ["dep:reqwest", "dep:serde_json"]
replicate = ["dep:replicate-rust"]

[dependencies]
lemon-graph.workspace = true
petgraph.workspace = true
thiserror.workspace = true
tracing.workspace = true

replicate-rust = { version = "0.0.5", optional = true }
reqwest = { version = "0.11.24", optional = true }
serde_json = { version = "1.0.114", optional = true }

[dev-dependencies]
tokio.workspace = true
tracing-subscriber = "0.3.18"
tracing-test.workspace = true
