[package]
name = "lemon-memory"
description = "Memory nodes for lemon-graph."
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = ["qdrant"]
qdrant = ["dep:qdrant-client"]

[dependencies]
lemon-graph.workspace = true
petgraph.workspace = true
thiserror.workspace = true
tracing.workspace = true

qdrant-client = { version = "1.8.0", optional = true }

[dev-dependencies]
tokio.workspace = true
